# ods_dump_telegram_channel

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml
ods_dump_telegram_channel/: dump_to_telegram_bot.py  ping_telegram_bot.py  utils.py
